--- a/exercises/ch-03/compact_self_attention.ipynb
+++ b/exercises/ch-03/compact_self_attention.ipynb
@@ -687,7 +687,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
