--- a/exercises/ch-04/gelu_activation.ipynb
+++ b/exercises/ch-04/gelu_activation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tiktoken \n",
+    "\n",
+    "tokenizer = tiktoken.get_encoding(\"gpt2\")\n",
+    "batch = []\n",
+    "txt1 = \"Every effort moves you\"\n",
+    "txt2 = \"Every day holds a\"\n",
+    "batch.append(torch.tensor(tokenizer.encode(txt1)))\n",
+    "batch.append(torch.tensor(tokenizer.encode(txt2)))\n",
+    "batch = torch.stack(batch, dim=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -223,6 +240,430 @@
     "    layer_sizes, use_shortcut=True\n",
     ")\n",
     "print_gradients(model_with_shortcut, sample_input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we import MultiHeadAttention from chapter 3\n",
+    "class MultiHeadAttention(nn.Module):\n",
+    "    def __init__(self, d_in, d_out, context_length, dropout, num_heads, qkv_bias=False):\n",
+    "        super().__init__()\n",
+    "        assert (d_out % num_heads == 0), \"d_out must be divisible by num_heads\"\n",
+    "        self.d_out = d_out\n",
+    "        self.num_heads = num_heads\n",
+    "        self.head_dim = d_out  // num_heads\n",
+    "        self.W_query = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_key = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_value = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.out_proj = nn.Linear(d_out, d_out)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        self.register_buffer(\n",
+    "            \"mask\",\n",
+    "            torch.triu(torch.ones(context_length, context_length), diagonal=1)\n",
+    "        )\n",
+    "    def forward(self, x):\n",
+    "        print(self.W_key)\n",
+    "        b, num_tokens, d_in = x.shape\n",
+    "        keys = self.W_key(x)\n",
+    "        queries = self.W_query(x)\n",
+    "        values = self.W_value(x)\n",
+    "        \n",
+    "        # We add a 'num_heads' dimension\n",
+    "        keys = keys.view(b, num_tokens, self.num_heads, self.head_dim)\n",
+    "        values = values.view(b, num_tokens, self.num_heads, self.head_dim)\n",
+    "        queries = queries.view(b, num_tokens, self.num_heads, self.head_dim)\n",
+    "\n",
+    "        # transpose from shape (b, num_tokens, num_heads, head_dim) to (b, num_heads, num_tokens, head_dim)\n",
+    "        keys = keys.transpose(1, 2)\n",
+    "        queries = queries.transpose(1, 2)\n",
+    "        values = values.transpose(1, 2)\n",
+    "\n",
+    "        attn_scores = queries @ keys.transpose(2, 3)\n",
+    "        mask_bool = self.mask.bool()[:num_tokens, :num_tokens]\n",
+    "\n",
+    "        attn_scores.masked_fill_(mask_bool, -torch.inf)\n",
+    "\n",
+    "        attn_weights = torch.softmax(\n",
+    "            attn_scores / keys.shape[-1] ** 0.5, dim=-1\n",
+    "        )\n",
+    "        attn_weights = self.dropout(attn_weights)\n",
+    "\n",
+    "        context_vec = (attn_weights @  values).transpose(1, 2)\n",
+    "        context_vec = context_vec.contiguous().view(b, num_tokens, self.d_out)\n",
+    "        context_vec = self.out_proj(context_vec)\n",
+    "        return context_vec\n",
+    "    \n",
+    "# and we need LayerNormalization\n",
+    "class LayerNorm(nn.Module):\n",
+    "    def __init__(self, emb_dim):\n",
+    "        super().__init__()\n",
+    "        self.eps = 1e-5\n",
+    "        # scale and shift is a trainable parameters, LLM automatically adjust it\n",
+    "        self.scale = nn.Parameter(torch.ones(emb_dim))\n",
+    "        self.shift = nn.Parameter(torch.zeros(emb_dim))\n",
+    "    def forward(self, x):\n",
+    "        mean = x.mean(dim=-1, keepdim=True)\n",
+    "        var = x.var(dim=-1, keepdim=True, unbiased=False)\n",
+    "        norm_x = (x - mean) / torch.sqrt(var + self.eps)\n",
+    "        return self.scale * norm_x + self.shift\n",
+    "        \n",
+    "\n",
+    "class TransformerBlock(nn.Module):\n",
+    "    def __init__(self, cfg):\n",
+    "        super().__init__()\n",
+    "        self.att = MultiHeadAttention(\n",
+    "            d_in=cfg[\"emb_dim\"],\n",
+    "            d_out=cfg[\"emb_dim\"],\n",
+    "            context_length=cfg[\"context_length\"],\n",
+    "            num_heads = cfg[\"n_heads\"],\n",
+    "            dropout=cfg[\"drop_rate\"],\n",
+    "            qkv_bias=cfg[\"qkv_bias\"]\n",
+    "        )\n",
+    "        self.ff = FeedForward(cfg)\n",
+    "        self.norm1 = LayerNorm(cfg[\"emb_dim\"])\n",
+    "        self.norm2 = LayerNorm(cfg[\"emb_dim\"])\n",
+    "        self.drop_shortcut = nn.Dropout(cfg[\"drop_rate\"])\n",
+    "    def forward(self,x ):\n",
+    "        shortcut = x \n",
+    "        x = self.norm1(x)\n",
+    "        x = self.att(x)\n",
+    "        x = self.drop_shortcut(x)\n",
+    "        x = x + shortcut \n",
+    "\n",
+    "        shortcut = x \n",
+    "        x = self.norm2(x)\n",
+    "        x = self.ff(x)\n",
+    "        x = self.drop_shortcut(x)\n",
+    "        x = x + shortcut \n",
+    "\n",
+    "        return x\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class GPTModel(nn.Module):\n",
+    "    def __init__(self, cfg):\n",
+    "        super().__init__()\n",
+    "        self.tok_emb = nn.Embedding(cfg[\"vocab_size\"], cfg[\"emb_dim\"])\n",
+    "        self.pos_emb = nn.Embedding(cfg[\"context_length\"], cfg[\"emb_dim\"])\n",
+    "        self.drop_emb = nn.Dropout(cfg[\"drop_rate\"])\n",
+    "\n",
+    "        self.trf_blocks = nn.Sequential(\n",
+    "            *[TransformerBlock(cfg) for _ in range(cfg[\"n_layers\"])])\n",
+    "        \n",
+    "        self.final_norm = LayerNorm(cfg[\"emb_dim\"])\n",
+    "        self.out_head = nn.Linear(\n",
+    "            cfg[\"emb_dim\"], cfg[\"vocab_size\"], bias=False\n",
+    "        )\n",
+    "    def forward(self, in_idx):\n",
+    "        batch_size, seq_len = in_idx.shape \n",
+    "        tok_embeds = self.tok_emb(in_idx)\n",
+    "        pos_embeds = self.pos_emb(\n",
+    "            torch.arange(seq_len, device=in_idx.device)\n",
+    "        )\n",
+    "        x = tok_embeds + pos_embeds \n",
+    "        x = self.drop_emb(x)\n",
+    "        x = self.trf_blocks(x)\n",
+    "        x = self.final_norm(x)\n",
+    "        logits = self.out_head(x)\n",
+    "        return logits\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "input batch: \n",
+      " tensor([[6109, 3626, 6100,  345],\n",
+      "        [6109, 1110, 6622,  257]])\n",
+      "\n",
+      "output shape: torch.Size([2, 4, 50257])\n",
+      "tensor([[[ 0.3613,  0.4223, -0.0711,  ...,  0.3483,  0.4661, -0.2838],\n",
+      "         [-0.1792, -0.5660, -0.9485,  ...,  0.0477,  0.5181, -0.3168],\n",
+      "         [ 0.7120,  0.0332,  0.1085,  ...,  0.1018, -0.4327, -0.2553],\n",
+      "         [-1.0076,  0.3418, -0.1190,  ...,  0.7195,  0.4023,  0.0532]],\n",
+      "\n",
+      "        [[-0.2564,  0.0900,  0.0335,  ...,  0.2659,  0.4454, -0.6806],\n",
+      "         [ 0.1230,  0.3653, -0.2074,  ...,  0.7705,  0.2710,  0.2246],\n",
+      "         [ 1.0558,  1.0318, -0.2800,  ...,  0.6936,  0.3205, -0.3178],\n",
+      "         [-0.1565,  0.3926,  0.3288,  ...,  1.2630, -0.1858,  0.0388]]],\n",
+      "       grad_fn=<UnsafeViewBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "model = GPTModel(GPT_CONFIG_124M)\n",
+    "\n",
+    "out = model(batch)\n",
+    "print(\"input batch: \\n\", batch)\n",
+    "print(\"\\noutput shape:\", out.shape)\n",
+    "print(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of parameters: 163,009,536\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_params = sum(p.numel() for p in model.parameters())\n",
+    "print(f\"Total number of parameters: {total_params:,}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Token embedding layer shape: torch.Size([50257, 768])\n",
+      "Output layer shape torch.Size([50257, 768])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Token embedding layer shape:\", model.tok_emb.weight.shape)\n",
+    "print(\"Output layer shape\", model.out_head.weight.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of trainable parameters considering weight tying: 124,412,160\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_params_gpt2 = (\n",
+    "    total_params - sum(p.numel() for p in model.out_head.parameters())\n",
+    ")\n",
+    "print(f\"Number of trainable parameters considering weight tying: {total_params_gpt2:,}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Computing memory requirements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total size of the model: 621.83 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_size_bytes = total_params * 4 # float32 is 4 bytes per parameter\n",
+    "total_size_mb = total_size_bytes / (1024 * 1024)\n",
+    "print(f\"Total size of the model: {total_size_mb:.2f} MB\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "encoded: [15496, 11, 314, 716]\n",
+      "encoded_tensor.shape: torch.Size([1, 4])\n"
+     ]
+    }
+   ],
+   "source": [
+    "start_context = \"Hello, I am\"\n",
+    "encoded = tokenizer.encode(start_context)\n",
+    "print(\"encoded:\", encoded)\n",
+    "encoded_tensor = torch.tensor(encoded).unsqueeze(0)\n",
+    "print(\"encoded_tensor.shape:\", encoded_tensor.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_text_simple(model, idx, max_new_tokens, context_size):\n",
+    "    for _ in range(max_new_tokens):\n",
+    "        idx_cond = idx[:, -context_size:]\n",
+    "        with torch.no_grad():\n",
+    "            logits = model(idx_cond)\n",
+    "        logits = logits[:, -1, :]\n",
+    "        probas = torch.softmax(logits, dim=-1)\n",
+    "        idx_next = torch.argmax(probas, dim=-1, keepdim=True)\n",
+    "        idx = torch.cat((idx, idx_next), dim=1)\n",
+    "    return idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Linear(in_features=768, out_features=768, bias=False)\n",
+      "Output: tensor([[15496,    11,   314,   716, 27018, 24086, 47843, 30961, 42348,  7267]])\n",
+      "output length:  10\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.eval() # activate evaluation mode, disables random components like dropout that only used during training\n",
+    "out = generate_text_simple(\n",
+    "    model=model,\n",
+    "    idx=encoded_tensor,\n",
+    "    max_new_tokens=6,\n",
+    "    context_size=GPT_CONFIG_124M[\"context_length\"]\n",
+    ")\n",
+    "print(\"Output:\", out)\n",
+    "print(\"output length: \", len(out[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, I am Featureiman Byeswickattribute argue\n"
+     ]
+    }
+   ],
+   "source": [
+    "decoded_text = tokenizer.decode(out.squeeze(0).tolist())\n",
+    "print(decoded_text)"
    ]
   },
   {
